<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".SignIn">

    <EditText
        android:id="@+id/signin_et_username"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/form_input_login"
        android:ems="10"
        android:hint="@string/signin_username"
        android:inputType="textPersonName"
        android:paddingLeft="35dp"
        android:textColorHint="#a8a8a8"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signin_et_password"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:background="@drawable/form_input_password"
        android:ems="10"
        android:hint="@string/signin_password"
        android:inputType="textPassword"
        android:paddingLeft="35dp"
        android:textColorHint="#a8a8a8"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/signin_et_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signin_et_username"
        app:layout_constraintTop_toBottomOf="@+id/signin_et_username" />

    <CheckBox
        android:id="@+id/signin_cb_remember"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:layout_marginTop="7dp"
        android:scaleX="0.65"
        android:scaleY="0.65"
        android:text="@string/signin_remember"
        android:textColor="#a8a8a8"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/signin_et_password"
        app:layout_constraintStart_toStartOf="@+id/signin_et_password"
        app:layout_constraintTop_toBottomOf="@+id/signin_et_password" />

    <Button
        android:id="@+id/signin_btn_auth"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginTop="7dp"
        android:background="#4254BC"
        android:text="@string/signin_auth"
        android:textAllCaps="true"
        android:textSize="9sp"
        app:layout_constraintEnd_toEndOf="@+id/signin_cb_remember"
        app:layout_constraintStart_toStartOf="@+id/signin_cb_remember"
        app:layout_constraintTop_toBottomOf="@+id/signin_cb_remember" />
</androidx.constraintlayout.widget.ConstraintLayout>